[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plane-sdk"
version = "1.0.0"
description = "Python SDK for Plane APIs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Plane", email = "support@plane.so" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0", "pydantic>=2.0.0", "typing-extensions>=4.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/makeplane/sdk-python"
Documentation = "https://github.com/makeplane/sdk-python"
Repository = "https://github.com/makeplane/sdk-python"
Issues = "https://github.com/makeplane/sdk-python/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/my_api_sdk --cov-report=html --cov-report=term-missing"
